--- a/P2_C0_R3.html
+++ b/P2_C0_R3.html
@@ -199,7 +199,7 @@
     Naši ciljevi su povezati entuzijastične planinare i potaknuti ljude da krenu na nezaboravne avanture!
     Zahvaljujemo svima koji koriste Kamensku-Knjigu. Hvala vam puno!😄
     </br></br><span class="notranslate">-Kamenska-Knjiga Group</span></br></br></br></br>Slobodno nas kontaktirajte ako je potrebno:
-    <span class="Blue-Highlight notranslate" id="EMail"> kamenskaknjiga-office@gmx.com</span></br></br></br></br>
+    <span class="Blue-Highlight notranslate" id="EMail"> kamenskaknjiga.office@gmail.com</span></br></br></br></br>
 
     <span class="Copyright-Text">
       <span class="Heading-Highlight">Autorsko pravo:</span></br>
